C/Guioes/bin/guiao02/bloco2/b2_01/Hello.g4
grammar Hello; // define grammar called Hello
statement: (greetings | bye)+; // match either greetings or bye
greetings:
	'hello ' ID; // match keyword hello followed by an identifier
bye: 'bye ' ID;
ID: [a-zA-Z]+; // match lower-case identifiers
WS:
	[ \t\r\n]+ -> skip; // skip spaces, tabs, newlines, \r (windows)
